--- a/package.json
+++ b/package.json
@@ -1,53 +1,45 @@
 {
-  "name": "pouchdb-plugin-seed",
-  "version": "0.1.0",
-  "description": "PouchDB Plugin Seed project",
+  "name": "pouch-summa",
+  "version": "0.0.1",
+  "description": "Makes PouchDB deal better with databases synced with SummaDB.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/pouchdb/plugin-seed.git"
+    "url": "git://github.com/fiatjaf/pouch-summa.git"
   },
   "keywords": [
     "pouch",
     "pouchdb",
     "plugin",
-    "seed",
-    "couch",
-    "couchdb"
+    "summa",
+    "summadb"
   ],
-  "author": "",
+  "author": "Giovanni T. Parra",
   "license": "Apache",
   "bugs": {
-    "url": "https://github.com/pouchdb/plugin-seed/issues"
+    "url": "https://github.com/fiatjaf/pouch-summa/issues"
   },
   "scripts": {
     "test-node": "TEST_DB=testdb,http://localhost:5984/testdb istanbul test ./node_modules/mocha/bin/_mocha test/test.js",
     "test-browser": "./bin/test-browser.js",
-    "jshint": "jshint -c .jshintrc *.js test/test.js",
-    "test": "npm run jshint && ./bin/run-test.sh",
+    "test": "mocha",
     "build": "mkdirp dist && npm run browserify && npm run min",
-    "browserify": "browserify index.js | ./bin/es3ify.js | derequire > dist/pouchdb.mypluginname.js",
-    "min": "uglifyjs dist/pouchdb.mypluginname.js -mc > dist/pouchdb.mypluginname.min.js",
-    "dev": "browserify test/test.js > test/test-bundle.js && npm run dev-server",
-    "dev-server": "./bin/dev-server.js",
-    "coverage": "npm test --coverage && istanbul check-coverage --lines 100 --function 100 --statements 100 --branches 100"
+    "browserify": "browserify index.js | derequire > dist/pouchdb.summa.js",
+    "min": "uglifyjs dist/pouchdb.summa.js -mc > dist/pouchdb.summa.min.js"
   },
   "dependencies": {
-    "lie": "^2.6.0",
+    "argsarray": "0.0.1",
     "inherits": "~2.0.1",
-    "argsarray": "0.0.1"
+    "lie": "^2.6.0",
+    "pouchdb-wrappers": "^1.3.6"
   },
   "devDependencies": {
-    "bluebird": "^1.0.7",
     "browserify": "^9.0.8",
     "chai": "^1.9.1",
     "derequire": "^2.0.0",
-    "es3ify": "^0.1.3",
-    "http-server": "~0.5.5",
-    "istanbul": "^0.2.7",
-    "jshint": "^2.3.0",
+    "es3ify": "^0.1.4",
     "mkdirp": "^0.5.0",
-    "mocha": "^1.18.2",
+    "mocha": "^2.3.4",
     "phantomjs": "^1.9.7-5",
     "pouchdb": "pouchdb/pouchdb",
     "request": "^2.36.0",
