--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pouch-summa",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Makes PouchDB deal better with databases synced with SummaDB.",
   "main": "index.js",
   "repository": {
@@ -15,7 +15,7 @@
     "summadb"
   ],
   "author": "Giovanni T. Parra",
-  "license": "Apache",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/fiatjaf/pouch-summa/issues"
   },
@@ -24,29 +24,31 @@
     "test-browser": "./bin/test-browser.js",
     "test": "mocha",
     "build": "mkdirp dist && npm run browserify && npm run min",
-    "browserify": "browserify index.js | derequire > dist/pouchdb.summa.js",
-    "min": "uglifyjs dist/pouchdb.summa.js -mc > dist/pouchdb.summa.min.js"
+    "browserify": "browserify --standalone pouchSumma index.js > dist/pouchdb.summa.js",
+    "min": "uglifyjs dist/pouchdb.summa.js -mc > dist/pouchdb.summa.min.js",
+    "prepublish": "npm run build"
   },
-  "dependencies": {
-    "argsarray": "0.0.1",
-    "inherits": "~2.0.1",
-    "lie": "^2.6.0",
-    "pouchdb-wrappers": "^1.3.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browserify": "^9.0.8",
     "chai": "^1.9.1",
     "derequire": "^2.0.0",
     "es3ify": "^0.1.4",
+    "inherits": "^2.0.1",
     "mkdirp": "^0.5.0",
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.7-5",
-    "pouchdb": "pouchdb/pouchdb",
+    "pouchdb": "github:pouchdb/pouchdb",
     "request": "^2.36.0",
     "sauce-connect-launcher": "^0.4.2",
     "selenium-standalone": "^3.0.2",
+    "transform-pouch": "^1.0.2",
     "uglify-js": "^2.4.13",
     "watchify": "^3.1.0",
     "wd": "^0.2.21"
+  },
+  "homepage": "https://github.com/fiatjaf/pouch-summa",
+  "directories": {
+    "test": "test"
   }
 }
